Fix: CV CTA buttons not wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2624,6 +2624,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
